--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: AVJekyll for Web Designers2
+title: Geomechanics
 description: "Companion blog to the lynda.com course, Jekyll for Web Designers. This site is designed to present Jekyll to web designers in a clear, concise way, and provide a resource and reference for those that are new to Jekyll."
-baseurl: "" 
-url: "" 
-tagline: 123A basic guide to Jekyll
+baseurl: "geomechanics" 
+url: "http://quangvunp.github.io" 
+tagline: A basic guide to Geomechanics
 
 # Build settings
 markdown: kramdown
