--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
 title: Geomechanics
 description: "Companion blog to the lynda.com course, Jekyll for Web Designers. This site is designed to present Jekyll to web designers in a clear, concise way, and provide a resource and reference for those that are new to Jekyll."
-baseurl: "/geomechanics" 
-url: "http://quangvunp.github.io" 
+baseurl: "" 
+url: "" 
 tagline: A basic guide to Geomechanics
 
 # Build settings
 markdown: kramdown
-
-
 
 #kramdown:
 #    auto_ids: false 
